// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Admin auth (integration-style) — /admin/login & /admin/renew GET /admin/renew matches snapshot on renew with valid tokens 1`] = `
{
  "body": {
    "data": {
      "accessToken": undefined,
      "refreshToken": undefined,
      "user": {
        "email": "admin@test.com",
        "id": "1",
        "name": "Test Admin",
      },
      "userType": "ADMIN",
    },
  },
  "cookies": [],
  "status": 200,
}
`;

exports[`Admin auth (integration-style) — /admin/login & /admin/renew POST /admin/login matches snapshot on successful login 1`] = `
{
  "body": {
    "data": {
      "accessToken": "<token>",
      "refreshToken": "<token>",
      "user": {
        "email": "admin@test.com",
        "id": "1",
        "name": "Test Admin",
      },
      "userType": "ADMIN",
    },
  },
  "cookies": [
    "accessToken=<token>; Max-Age=<normalized>; Path=/; Expires=<normalized>; HttpOnly; SameSite=Lax",
    "refreshToken=<token>; Max-Age=<normalized>; Path=/; Expires=<normalized>; HttpOnly; SameSite=Lax",
  ],
  "status": 200,
}
`;
